fixed svg covering buttons on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,7 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 30vh;
+  // height: 30vh;
   // margin-top: 100px;
 }
 
